make tour button more prominent
Former-commit-id: 5d56becf2c0dbd01d9b9f8cfdfccfc4b290cb790 [formerly 90e739cc021894f2f6ca0a8a7a69e0cffcd8bbfb]
Former-commit-id: 1e665c1aa26147e231bbbe845d259358cdba82fe
Former-commit-id: 8f394719f17c61c1272df3ce82aa7de287fe11c4

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -502,6 +502,7 @@ and (max-device-width : 1024px) {
   position: relative;
   bottom: 30px;
   color:#333;
+  box-shadow: 2px 2px 2px gray;
 }
 
 .btn-intro:hover {
