only show dirs with raw data; fix bg preprocess; style fixes

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -237,3 +237,12 @@ input[type=text] {
     color: #fff;
     border-color: transparent;
 }
+
+/* TODO: fix in shinypanel.css */
+.sF-textChoice > .btn {
+    min-height: inherit;
+}
+
+.sF-breadcrumps {
+    width: calc(100% - 350px);
+}
