--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -257,3 +257,13 @@ input[type=text] {
     width: calc(100% - 350px);
 }
 
+
+/*disable tooltips on mobile*/
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px) {
+    .tooltip {
+        display: none !important;
+    }
+ }
+
