change docs link and brand link

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -87,6 +87,7 @@
     padding: 5px 12px 5px 0px;
     cursor: default;
     color: #333;
+    text-decoration: none !important;
 }
 
 .brand-icons img {
