add NEWS; remove loom; use scDblFinder
* Added a `NEWS.md` file to track changes to the package.
* Removed `LoomExperiment` in favor of `qs::qsave(..., preset = 'fast')`
* Uses `scDblFinder` for detecting doublets.

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -296,3 +296,9 @@ and (max-device-width : 1024px) {
     cursor: not-allowed !important;
 }
 
+
+/*always show numeric input arrows*/
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+   opacity: 1;
+}
