--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -237,6 +237,8 @@ input[type=text] {
 }
 
 
+
+
 /* introjs button styling */
 .btn-intro {
     border: 1px solid #ddd;
@@ -248,6 +250,10 @@ input[type=text] {
     margin-right: -1px;
     background-color: white;
 
+}
+
+body {
+  padding-right: 0px !important;
 }
 
 .btn-intro:hover:not(.disabled) {
@@ -271,6 +277,10 @@ input[type=text] {
   margin-bottom: 50px;
   padding: 15px;
   background-color: slategray;
+}
+
+.secondary-navbar .btn-group {
+  margin-right: 10px;
 }
 
 /*shinyFiles TODO: fix in shinypanel.css */
