--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -173,6 +173,25 @@ ul.nav.navbar-nav {
 
 /* DATATABLES */
 
+/* filter box */
+td .form-group {
+  min-height: unset !important;
+}
+
+thead tr:nth-child(2) td {
+  padding: 0px 0.5px 10px;
+}
+
+thead tr:nth-child(2) input {
+  border-radius: 0px;
+}
+
+
+.dataTables_scroll,
+.dataTables_scrollBody {
+    overflow-x: hidden !important;
+}
+
 .dt-fake-height {
     height: 1px;
 }
