--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -260,18 +260,17 @@ input[type=text] {
 }
 
 
-
-
 /* introjs button styling */
-.btn-intro {
+.btn-intro, .btn-intro:focus {
     border: 1px solid #ddd;
     padding: 6px 8px;
     border-radius: 2px;
     cursor: pointer;
-    font-size: 12px;
-    color: #333;
+    font-size: 13px;
     margin-right: -1px;
-    background-color: white;
+    background-color: slategray;
+    color: white;
+    border-style: dashed;
 
 }
 
@@ -280,8 +279,8 @@ body {
 }
 
 .btn-intro:hover:not(.disabled) {
-    background: #333;
-    color: #fff;
+    background: #fff;
+    color: #333;
     border-color: transparent;
 }
 
@@ -303,7 +302,7 @@ body {
 }
 
 .secondary-navbar-btn-group {
-  margin-right: 20px;
+  margin-right: 15px;
   display: inline;
 }
 
@@ -313,8 +312,8 @@ body {
 }
 
 #feedback-btn {
-  height: 28px;
-  margin-bottom: 1px;
+  height: 29px;
+  margin-bottom: 2px;
 }
 
 #feedback {
@@ -326,6 +325,9 @@ ul.dropdown-menu {
   margin-left: -62px;
 }
 
+.secondary-navbar i:hover {
+  color: #333;
+}
 
 /*shinyFiles TODO: fix in shinypanel.css */
 .sF-textChoice > .btn {
