fix redraws of gene tables

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -222,6 +222,10 @@ td.dt-nopad span {
     overflow-x: hidden;
 }
 
+.normal-header table.dataTable thead th, table.dataTable thead td {
+  font-weight: normal;
+}
+
 /* no overflow-y for drugs/bulk */
 .dt-container .dataTables_scrollBody {
   overflow-y: hidden !important;
