--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -346,10 +346,17 @@ body {
 }
 
 #dropdown-menu-feedback-btn {
-    margin-top: 23px;
-    margin-left: -66px;
-    width: auto;
+    position: fixed;
     max-width: 360px;
+    top: 111px;
+    left: 2px;
+    width: 99%%;
+}
+
+@media (min-width: 461px) {
+    #dropdown-menu-feedback-btn {
+          left: 15px;
+    }
 }
 
 
