inline table working

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -11,22 +11,15 @@ body {
   height: 0;
 }
 
-.handsontable th {
-  background-color: #f8f8f8;
-}
+/* handsontable stuff */
 
-.handsontable th { overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
-
-
-.handsontable .left {
-  text-align: left;
+.handsontable td {
+  white-space: nowrap;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.handsontable-container {
-  max-height: 326px;
-  overflow-y: auto;
-}
+
 
 .selectize-with-ht .selectize-fh {
   min-height: unset;
@@ -40,10 +33,17 @@ body {
   border-top-right-radius: 4px !important;
 }
 
+
 .selectize-with-ht {
   min-height: 100px;
   margin-bottom: 15px;
 }
+
+.handsontable-container {
+  margin-bottom: 50px;
+}
+
+/* end handsontable */
 
 @media (max-width: 460px) {
   .col-sm-12 {
