move integration to modal

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -19,7 +19,9 @@ body {
   text-overflow: ellipsis;
 }
 
-
+.modal-body .form-group {
+  min-height: 100px;
+}
 
 .selectize-with-ht .selectize-fh {
   min-height: unset;
