disable resoln when transfering labels

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -11,6 +11,11 @@ body {
     max-width: 435px !important;
 }
 
+.progress-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .invisible-height {
   visibility: hidden;
   height: 0;
