big one; see description
- instead of ambient gene calling: add column showing number of clusters with FDR<0.5
- DE grid: plot clusters with FDR<0.5 and FDR<0.05
- use cluster color for label boxes
- feature table supports keyboard interactions
- gene table filters are preserved
- can clear gene table filters
- deduplication of cluster names is prettier
- dont hide annotation with high spread

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -208,19 +208,14 @@ body {
     padding-top: 6px;
 }
 
-.ambience-swatch {
-    height: 8px;
-    width: 8px;
-    display: inline-block;
-    border-radius: 50%;
-    background-color: #f0ad4e;
-    margin-top: 6px;
-    padding-top: 6px;
-}
-
 .form-control {
     /* remove ugly box shadow from inputs */
     box-shadow: inset 0px 0px 0px 0px red;
+}
+
+/* remove box-shadow from KeyTable DT extension */
+table.dataTable tbody th.focus, table.dataTable tbody td.focus {
+  box-shadow: none;
 }
 
 
