init cluster merge; other
- top_tables_grid saved outside of resolution directory (not dependent on resolution --> less calculation)
- add more distinct borders for hidden-forms
- prevent demo from re-enabling things after label transfer

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -444,6 +444,11 @@ body {
     text-align: center;
 }
 
+.hidden-form {
+  border-color: gray;
+  border-style: dashed;
+}
+
 @media (max-width: 460px) {
     .hidden-xxs {
         display: none!important;
